fix body overflow, add debug flag, abstract cube rendering more

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ body {
     width: 100%;
     background-color: #FFF;
     color: #000;
+    overflow: hidden;
 }
 
 #stage {
